--- a/backend/package.json
+++ b/backend/package.json
@@ -4,5 +4,17 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mongoose": "^8.2.1"
-  }
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "server.js",
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
