--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "aws-sdk": "^2.1574.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cloudinary": "^2.0.3",
@@ -12,6 +13,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "socket.io": "^4.7.4",
+    "streamifier": "^0.1.1",
     "uuid": "^9.0.1"
   },
   "scripts": {
