--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.0",
     "eventemitter3": "^5.0.1",
     "framer-motion": "^11.0.8",
+    "mongoose": "^8.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
